--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=codebase
-DB_USERNAME=codebase
-DB_PASSWORD=codebase
+DB_DATABASE=fvwusbfqhosting_pga
+DB_USERNAME=fvwusbfqhosting_pga
+DB_PASSWORD=Hoanggiap123@
 
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
