--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "php": "^8.2",
         "dedoc/scramble": "^0.11.30",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9",
-        "tymon/jwt-auth": "^2.1"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
